--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,62 @@
 /*  your css code here. If applicable */
 body {
-  font-family: Arial, sans-serif;
-  background-color: #f0f2f5;
+  /*font-family: Arial, sans-serif;
+  background-color: #f0f2f5;*/
+	background-color:  #f6f6f6;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
 }
-img{
+.container {
+	display:flex;
+	flex-direction:row;
+}
+.left{
+	width: 450px;
+	margin-top: 70px;
+	display: inline-block;
+}
+.form{
+	display: flex;
+	width: 300px;
+	background-color: white;
+	padding: 20px;
+	border-radius: 5px;
+	box-shadow: 0 0 10px #ccc;
+	flex-direction: column;
+	gap: 10px;
+}
+.form input{
+	border: 1px solid #ccc;
+	border-radius: 5px;
+	padding: 10px;
+}
+.form button{
+	background-color: #1877f2;
+	border-radius:5px;
+	padding: 10px 20px;
+}
+.create-account-btn{
+	background-color: 42b72a;
+}
+
+
+
+/*img{
   justify-content: center;
-	left: 30px;
-	padding:30px;
-	width:90px;
-	height:90px;
+  left: 30px;
+  padding:30px;
+  width:90px;
+  height:90px;
 }
 
 .container {
-display:flex;
+	display:flex;
 	flex-direction:row;
- 
 }
 .login{
-	 max-width: 400px;
+  max-width: 400px;
   margin: 0 auto;
   padding: 40px;
   background-color: #fff;
@@ -83,8 +122,6 @@ display:flex;
 	border-radius:5px;
 }
 .create-account-btn >a{
-	
-
 	border: 2px solid red;
 }
 a.forgot{
